# MIPT_PROJECT

./: CMakeLists.txt  README.md  package.deb
Battleship/: CMakeLists.txt  README.md
Battleship/include/: constants.h  game.h  graphicUI.h  player.h  settings.h  ship.h
Battleship/src/: game.cpp  main.cpp  menu.cpp  player.cpp  ship.cpp
Battleships/: CMakeLists.txt  constants.h  customText.h  game.h  main.cpp
Battleships/buils/: CMakeCache.txt  Makefile  battleships  cmake_install.cmake
Battleships/include/: UI.h  cell.h  game.h  graphicUI.h  player.h
Battleships/src/: cell.cpp  customText.cpp  field.cpp  game.cpp  menu.cpp  player.cpp  ship.cpp
battleships/: CMakeLists.txt  main.cpp  shipFactory.h  spriteManager.h
battleships/headers/: UI.h  consoleUI.h  constants.h  graphicUI.h  shipBuilder.cpp  shipBuilder.h
battleships/src/: customText.cpp  game.cpp  menu.cpp  player.cpp  ship.cpp
headers/: cell.h  cellState.h  field.h  menu.h  ship.h
include/: UI.h  consoleUI.h  field.h  graphicUI.h  player.h  ship.h
package/DEBIAN/: control
src/: cell.cpp  consoleUI.cpp  field.cpp  game.cpp  graphicUI.cpp  main.cpp  menu.cpp  player.cpp
